03.business-os/AICompanyManager/900.meta/white_screen_root_cause_20260501_061807/031_vm_harness.out
VM_STATUS=ERROR
VM_ERROR_NAME=SyntaxError
VM_ERROR_MESSAGE=Unexpected token 'async'
VM_ERROR_STACK_START
/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/assets/js/aicm-production-core.js:1082
async async function aicmAxcSyncRolePlacementsForPayload(payload) {
      ^^^^^

SyntaxError: Unexpected token 'async'
    at new Script (node:vm:117:7)
    at createScript (node:vm:269:10)
    at Object.runInContext (node:vm:300:10)
    at Object.<anonymous> (/data/data/com.termux/files/home/03.civilization-development/03.business-os/AICompanyManager/900.meta/white_screen_root_cause_20260501_061807/030_vm_harness.cjs:168:6)
    at Module._compile (node:internal/modules/cjs/loader:1812:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1943:10)
    at Module.load (node:internal/modules/cjs/loader:1533:32)
    at Module._load (node:internal/modules/cjs/loader:1335:12)
    at wrapModuleLoad (node:internal/modules/cjs/loader:255:19)
    at Module.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:154:5)
VM_ERROR_STACK_END
VM_LOGS_START

VM_LOGS_END
ROOT_HTML_LEN=0
ROOT_HTML_HEAD=
